# test_obf

./: .dockerignore  .gitignore  Dockerfile  README.md  arhitecture.txt  docker-compose.yaml  entrypoint.sh  logger.py  pyproject.toml  requirements.txt
app_accounting/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
app_accounting/services/: user_salary.py
app_global/: admin.py  apps.py  models.py  tests.py  views.py
app_global/management/commands/: auto_create_global_settings.py
app_history/: admin.py  apps.py  models.py  signals.py
app_productions/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
app_users/: admin.py  apps.py  forms.py  managers.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
app_users/management/commands/: create_superuser.py
app_users/permission/: user_permissions.py
app_users/services/: user_register.py
config/: asgi.py  logger.py  settings.py  urls.py  wsgi.py
config/auto_create_start/: create_pier_user.py
config/custom_loggs/: custom_log.py
config/custom_theme/: theme_settings.py
postgr/: docker-compose.yaml
pyarmor_runtime_000000/: __init__.py
templates/admin/: base.html  index.html  profile_form.html
templates/reports/: monthly_user_production_report.html
